Bug 19251 - --enable-win32=yes and --enable-win32-font=no causes compilation failure
Summary: --enable-win32=yes and --enable-win32-font=no causes compilation failure
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: win32 backend (show other bugs)
Version: 1.8.4
Hardware: All Windows (All)
: low minor
Assignee: cairo-bugs mailing list
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-23 04:17 UTC by Otfried Cheong
Modified: 2009-05-20 09:40 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Otfried Cheong 2008-12-23 04:17:10 UTC
I would like to build Cairo with Win32 surfaces, but have no need for Win32 fonts.  configure appears to offer this option - but compilation fails, because win32-font functions are called inside the Win32 printing surfaces.

These calls should be disabled if win32 fonts are not compiled in.  Perhaps one could also make the win32 printing surfaces configurable (I have no need for them either).  It would be fine if win32 printing surfaces required win32 fonts.

Alternatively, --enable-win32-font should be removed, and win32 should always be supported if win32 surfaces are.
Comment 1 Chris Wilson 2009-05-20 09:40:16 UTC
I've a local commit to "Wrap win32-font usage with CAIRO_HAS_WIN32_FONT" to fix this issue and will push to master along with the next batch of updates.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.